tests/ui/errors/unterminated_element.rs
use leptos_mview::view;

fn main() {
    view! {
        input type="text"
        "hi"
    };
}
